--- a/docs/explore/redisinsightv2/windows/index-windows.mdx
+++ b/docs/explore/redisinsightv2/windows/index-windows.mdx
@@ -60,7 +60,7 @@ Fill out the rest of the form and click “Download”.
 
 #### Install RedisInsight
 
-Click on the RedisInsight executable(in the form of .exe) and install it in your system.
+Click on the RedisInsight executable (.exe file) and install it in your system.
 
 ![setup redisinsight](images/redisinsight-setup.png)
 
