--- a/docs/explore/redisinsightv2/windows/index-windows.mdx
+++ b/docs/explore/redisinsightv2/windows/index-windows.mdx
@@ -66,7 +66,7 @@ Click on the RedisInsight executable (.exe file) and install it in your system.
 
 Once the RedisInsight software is installed, click on its icon to open the RedisInsight application. It will display the End-User License Agreement and Privacy Settings. Enable Analytics and Encrypt sensitive information as per your preference.
 
-![accept redisinsigh licence](images/redisinsight-eula.png)
+![accept redisinsight licence](images/redisinsight-eula.png)
 
 ### Step 3. Connect to a Redis Database
 
