--- a/docs/explore/redisinsightv2/windows/index-windows.mdx
+++ b/docs/explore/redisinsightv2/windows/index-windows.mdx
@@ -112,7 +112,7 @@ The user hashes contain the following fields:
 
 ### Step 6. Clone the repository
 
-Open up the CLI terminal and run the following command:
+Open up the CLI terminal and run the following commands:
 
  ```bash
   git clone https://github.com/redis-developer/redis-datasets
