--- a/docs/explore/redisinsightv2/windows/index-windows.mdx
+++ b/docs/explore/redisinsightv2/windows/index-windows.mdx
@@ -70,7 +70,7 @@ Once the RedisInsight software is installed, click on its icon to open the Redis
 
 ### Step 3. Connect to a Redis Database
 
-Enter the requested details, including Host (endpoint), Port, and Alias in the form, as shown below. You can use "default" as username for now. Then click “ADD REDIS DATABASE”.
+Enter the requested details, including Host (endpoint), Port, and Alias in the form, as shown below. You can use "default" as the username for now. Then click “ADD REDIS DATABASE”.
 
 ![adding redis database](images/redisinsight-add-database.png)
 
