--- a/docs/explore/redisinsightv2/windows/index-windows.mdx
+++ b/docs/explore/redisinsightv2/windows/index-windows.mdx
@@ -139,7 +139,7 @@ You can get a real-time view of the data in your Redis database as shown below:
 
 
 
-Select any key in the keys view and the key's value gets displayed in the right hand side that includes Fields and values.
+Select any key in the keys view and the key's value gets displayed in the right hand side that includes fields and values.
 
 ![hash keys listed](images/redisinsight_hashes.png)
 
