--- a/docs/explore/redisinsightv2/windows/index-windows.mdx
+++ b/docs/explore/redisinsightv2/windows/index-windows.mdx
@@ -146,7 +146,7 @@ Select any key in the keys view and the key's value gets displayed in the right 
 
 ### Step 8. Modify a key
 
-RedisInsight browser tool allows you to modify the data instantly.
+The RedisInsight browser tool allows you to modify the data instantly.
 Select any key and change the values as shown in the following screenshot
 
 ![modify the redis keys](images/redisinsight_modify_keys.png)
