--- a/docs/explore/redisinsightv2/windows/index-windows.mdx
+++ b/docs/explore/redisinsightv2/windows/index-windows.mdx
@@ -155,7 +155,7 @@ Select any key and change the values as shown in the following screenshot
 
 ### Step 9. Cleaning up
 
-Run the below command to clean up all the Redis keys
+Run the following command to clean up all the Redis keys:
 
 ![flushing the database](images/redisinsight_flushdb.png)
 
