--- a/docs/explore/redisinsightv2/windows/index-windows.mdx
+++ b/docs/explore/redisinsightv2/windows/index-windows.mdx
@@ -17,7 +17,7 @@ RedisInsight v2.0 incorporates a completely new tech stack based on the popular 
 The RedisInsight desktop client installer for Windows is just 70 MB in size. It allows you to download and use the RedisInsight GUI locally. The desktop client is supported on Windows operating systems and works with all variants of Redis. RedisInsight should install and run on a fresh Windows system.
 
 :::info INFO
-There is no need to install any .NET framework in order to install RedisInsight on Windows platform.
+There is no need to install the .NET framework in order to install RedisInsight on Windows.
 :::
 
 ## Getting Started
