Removed hero image and minor formatting changes

--- a/docs/create/windows/index-windows.mdx
+++ b/docs/create/windows/index-windows.mdx
@@ -70,7 +70,7 @@ Please note: By default, Redis has 0-15 indexes for databases, you can change th
  ```bash
   sudo service redis-server stop
  ```
-### Next Step
+### Next Steps
 
 
 
