Replaced DevOps Image

--- a/docs/operate/index-operate.mdx
+++ b/docs/operate/index-operate.mdx
@@ -12,7 +12,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 The following links provides you with the available options to provision Redis and acceperate app deployment using Devops.
 
 <a href="https://redis.com/blog/why-devops-teams-love-redis-enterprise/">
-<img src="/img/logos/devopslogo.png" alt="docusaurus mascot" />
+<img src="/img/logos/devopslogo.jpg" alt="devops logo" />
 </a>
 
 # Explore by Category
