--- a/docs/create/aws/redis-on-aws/index-redis-on-aws.mdx
+++ b/docs/create/aws/redis-on-aws/index-redis-on-aws.mdx
@@ -14,6 +14,13 @@ Follow the below steps to setup Redis Enterprise Cloud hosted over AWS Cloud:
 
 Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
+:::info TIP
+For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
+
+:tada: [Click here to sign up](https://redis.com/try-free)
+
+:::
+
 ![My Image](images/try-free.png)
 
 
