--- a/docs/create/heroku/herokugo/index-herokugo.mdx
+++ b/docs/create/heroku/herokugo/index-herokugo.mdx
@@ -25,6 +25,13 @@ Heroku recognizes an app as being written in Go by the existence of a `go.mod` f
 
 Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free).
 
+:::info TIP
+For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
+
+:tada: [Click here to sign up](https://redis.com/try-free)
+
+:::
+
 ![recloud](try-free.png)
 
 [Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
