--- a/docs/create/heroku/herokuruby/index-herokuruby.mdx
+++ b/docs/create/heroku/herokuruby/index-herokuruby.mdx
@@ -17,6 +17,13 @@ Here's a quickstart guide to deploy Ruby apps on Heroku using Redis. We will be 
 
 Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free).
 
+:::info TIP
+For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
+
+:tada: [Click here to sign up](https://redis.com/try-free)
+
+:::
+
 ![recloud](try-free.png)
 
 [Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
