--- a/docs/create/heroku/portal/index-heroku.mdx
+++ b/docs/create/heroku/portal/index-heroku.mdx
@@ -36,7 +36,7 @@ You can quickly and easily get your apps up and running with Redis Enterprise Cl
 
 Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free) 
 
-:::tip TIP
+:::info TIP
 For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
