--- a/docs/create/cloudrun/index-cloudrun.mdx
+++ b/docs/create/cloudrun/index-cloudrun.mdx
@@ -47,7 +47,7 @@ In this tutorial, you will learn how to deploy a simple Redis rate limiting appl
 
 Visit [developer.redis.com/create/rediscloud/](https://developer.redis.com/create/rediscloud/) and create [a free Redis Enterprise Cloud account](https://redis.com/try-free/). Once you complete the signup tutorial, you will be provided with the database endpoint URL, port and password. Save these for future reference.
 
-:::tip TIP
+:::info TIP
 For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
 
 :tada: [Click here to sign up](https://redis.com/try-free)
