--- a/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
+++ b/docs/create/heroku/ratelimiting-go/index-ratelimitinggo.mdx
@@ -15,6 +15,13 @@ In this tutorial, we will see how to deploy Rate Limiting using Redis and Go.
 
 Create your free Redis Enterprise Cloud account by visiting [this link](https://redis.com/try-free)
 
+:::info TIP
+For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
+
+:tada: [Click here to sign up](https://redis.com/try-free)
+
+:::
+
 ![recloud](images/try-free.png)
 
 [Follow this link to create a Redis Enterprise Cloud](/create/rediscloud) subscription and database as shown below:
