--- a/docs/howtos/redisearch/index-redisearch.mdx
+++ b/docs/howtos/redisearch/index-redisearch.mdx
@@ -16,6 +16,13 @@ RediSearch also supports auto-completion with fuzzy prefix matching, and atomic 
 
 Create your free <a href="https://redis.com/try-free/" target="_blank" rel="noopener">Redis Enterprise Cloud account</a>. Once you click on “Get Started”, you will receive an email with a link to activate your account and complete your signup process.
 
+:::info TIP
+For a limited time, use **TIGER200** to get **$200** credits on Redis Enterprise Cloud and try all the advanced capabilities!
+
+:tada: [Click here to sign up](https://redis.com/try-free)
+
+:::
+
 ![My Image](images/try-free.png)
 
 
