Added ArgoCD tutorial

--- a/docs/operate/continuous-integration-continuous-deployment/index-continuous-integration-continuous-deployment.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/index-continuous-integration-continuous-deployment.mdx
@@ -18,6 +18,14 @@ The following links provides you with the available options to embed Redis into 
             description="Learn how to deploy Redis Enterprise Database from a Jenkins Pipeline"
             page="/operate/continuous-integration-continuous-deployment/jenkins"
             />
+    </div>
+
+   <div class="col">
+        <RedisCard
+            title="ArgoCD - What It Is And Why It Should Be Part of Your Redis CI-CD Pipeline"
+            description="Learn about ArgoCD and implement voting app using Redis"
+            page="/operate/continuous-integration-continuous-deployment/argocd"
+            />
      </div>
 
   </div>
