Added missing slug

--- a/docs/explore/redisinsightv2/windows/index-windows.mdx
+++ b/docs/explore/redisinsightv2/windows/index-windows.mdx
@@ -2,6 +2,7 @@
 id: index-windows
 title: How to run RedisInsight on Windows
 sidebar_label: How to run RedisInsight on Windows
+slug: /explore/redisinsightv2/windows
 authors: [ajeet]
 ---
 
