--- a/docs/operate/continuous-integration-continuous-deployment/index-continuous-integration-continuous-deployment.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/index-continuous-integration-continuous-deployment.mdx
@@ -9,7 +9,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 
 
-The following links provides you with the available options to embed Redis into your continuous integration and continuous deployment process.
+The following links show you the different ways to embed Redis into your continuous integration and continuous deployment process.
 
 <div class="row">
     <div class="col">
