--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -55,7 +55,7 @@ The following is an architectural diagram of how a Jenkins pipeline adds a datab
 
 
 
-![alt_text](images/image2.png)
+![Architecture diagram](images/image2.png)
 
 
 
