--- a/docs/operate/provisioning/terraform/index-terraform.mdx
+++ b/docs/operate/provisioning/terraform/index-terraform.mdx
@@ -148,7 +148,7 @@ Use Homebrew to install Terraform on MacOS as shown below:
 
 ### Step 2: Sign up for a free Redis Enterprise Cloud account
 
-[Follow this tutorial](https://developer.redis.com/create/aws/redis-on-aws) to sign up for free Redis Enterprise Cloud account. 
+[Follow this tutorial](https://developer.redis.com/create/aws/redis-on-aws) to sign up for a free Redis Enterprise Cloud account. 
 
 ![Redis Cloud](tryfree.png)
 
