--- a/docs/operate/provisioning/terraform/index-terraform.mdx
+++ b/docs/operate/provisioning/terraform/index-terraform.mdx
@@ -157,7 +157,8 @@ Use Homebrew to install Terraform on MacOS as shown below:
 If you have a Flexible (or Annual) Redis Enterprise Cloud subscription, you can use a REST API to manage your subscription programmatically. The Redis Cloud REST API is available only to Flexible or Annual subscriptions. It is not supported for Fixed or Free subscriptions.
 
 For security reasons, the Redis Cloud API is disabled by default. To enable the API:
-Sign in to your Redis Cloud subscription as an account owner.
+
+- Sign in to your Redis Cloud subscription as an account owner.
 From the menu, choose Access Management.
 
 When the Access Management screen appears, select the API Keys tab.
