--- a/docs/operate/provisioning/terraform/index-terraform.mdx
+++ b/docs/operate/provisioning/terraform/index-terraform.mdx
@@ -161,7 +161,7 @@ For security reasons, the Redis Cloud API is disabled by default. To enable the 
 - Sign in to your Redis Cloud subscription as an account owner.
 From the menu, choose Access Management.
 
-When the Access Management screen appears, select the API Keys tab.
+- When the Access Management screen appears, select the API Keys tab.
 
 ![Terraform](accessmanagement.png)
 
