--- a/docs/operate/provisioning/terraform/index-terraform.mdx
+++ b/docs/operate/provisioning/terraform/index-terraform.mdx
@@ -159,7 +159,7 @@ If you have a Flexible (or Annual) Redis Enterprise Cloud subscription, you can 
 For security reasons, the Redis Cloud API is disabled by default. To enable the API:
 
 - Sign in to your Redis Cloud subscription as an account owner.
-From the menu, choose Access Management.
+- From the menu, choose Access Management.
 
 - When the Access Management screen appears, select the API Keys tab.
 
