--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -114,7 +114,7 @@ Choose "Install suggested plugins"
 
 Wait for the plugins to complete the installation process.
 
-![alt_text](images/image5.png)
+![Plugin installation](images/image5.png)
 
 
 Next, you’re prompted to create your admin user.
