--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -121,7 +121,7 @@ Next, you’re prompted to create your admin user.
 
 
 
-![alt_text](images/image6.png)
+![Creating an admin user](images/image6.png)
 
 
 Congratulations! Jenkins is ready!
