--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -106,7 +106,7 @@ Then open[ http://localhost:8080/](http://localhost:8080/) and enter the passwor
 
 Choose "Install suggested plugins"
 
-![alt_text](images/image4.png)
+![Installing plugins](images/image4.png)
 
 
 
