--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -102,7 +102,7 @@ The installation will generate a first-run password in the docker-cli output.
 
 Then open[ http://localhost:8080/](http://localhost:8080/) and enter the password to unlock your instance and begin installation.
 
-![alt_text](images/image3.png)
+![Beginning installation of Jenkins](images/image3.png)
 
 Choose "Install suggested plugins"
 
