--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -126,7 +126,7 @@ Next, you’re prompted to create your admin user.
 
 Congratulations! Jenkins is ready!
 
-![alt_text](images/image7.png)
+![Jenkins ready for use](images/image7.png)
 
 
 
