--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -180,7 +180,7 @@ RUN pip3 install requests
 
 Using the left-side menu, select **Manage Jenkins**, then select **Manage Credentials**, then click the link **(global)**.
 
-![alt_text](images/image8.png)
+![Adding credentials](images/image8.png)
 
 
 ![alt_text](images/image9.png)
