--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -183,7 +183,7 @@ Using the left-side menu, select **Manage Jenkins**, then select **Manage Creden
 ![Adding credentials](images/image8.png)
 
 
-![alt_text](images/image9.png)
+![Adding credentials](images/image9.png)
 
 ![alt_text](images/image10.png)
 
