--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -207,7 +207,7 @@ From here, you can specify Kind: **Secret text** for the 4 secrets required to c
     * Set to the Redis admin user's password.
 
 
-![alt_text](images/image11.png)
+![Managing secrets](images/image11.png)
 
 If you are using a private code repository, you may also wish to include a Personal Access Token here.
 
