--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -197,7 +197,7 @@ From here, you can specify Kind: **Secret text** for the 4 secrets required to c
 
 
 
-- REDIS_SERVER_FQDN
+- `REDIS_SERVER_FQDN`
     * Set to the 'https://server-address' of the target Redis instance.
 - REDIS_SERVER_PORT
     * Set to the Redis REST API port (default 9443).
