--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -199,7 +199,7 @@ From here, you can specify Kind: **Secret text** for the 4 secrets required to c
 
 - `REDIS_SERVER_FQDN`
     * Set to the 'https://server-address' of the target Redis instance.
-- REDIS_SERVER_PORT
+- `REDIS_SERVER_PORT`
     * Set to the Redis REST API port (default 9443).
 - REDIS_USER
     * Set to the Redis admin user allowed to create databases.
