--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -201,7 +201,7 @@ From here, you can specify Kind: **Secret text** for the 4 secrets required to c
     * Set to the 'https://server-address' of the target Redis instance.
 - `REDIS_SERVER_PORT`
     * Set to the Redis REST API port (default 9443).
-- REDIS_USER
+- `REDIS_USER`
     * Set to the Redis admin user allowed to create databases.
 - REDIS_PASS
     * Set to the Redis admin user's password.
