--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -203,7 +203,7 @@ From here, you can specify Kind: **Secret text** for the 4 secrets required to c
     * Set to the Redis REST API port (default 9443).
 - `REDIS_USER`
     * Set to the Redis admin user allowed to create databases.
-- REDIS_PASS
+- `REDIS_PASS`
     * Set to the Redis admin user's password.
 
 
