--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -216,7 +216,7 @@ If you are using a private code repository, you may also wish to include a Perso
 
 From the dashboard, click **New Item**.
 
-![alt_text](images/image12.png)
+![Creating a new pipeline](images/image12.png)
 
 Enter in a name for the pipeline, and choose the **Pipeline** type.
 
