--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -220,7 +220,7 @@ From the dashboard, click **New Item**.
 
 Enter in a name for the pipeline, and choose the **Pipeline** type.
 
-![alt_text](images/image13.png)
+![Naming the pipeline](images/image13.png)
 
 
 
