--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -229,7 +229,7 @@ Enter in a name for the pipeline, and choose the **Pipeline** type.
 
 From the Pipeline configuration page that appears, check the **GitHub** box and enter the git clone URL, complete with any credentials needed to read the repository. For GitHub access, the password should be a Personal Access Token rather than the actual user password.
 
-![alt_text](images/image14.png)
+![Configuring GitHub access](images/image14.png)
 
 
 
