--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -239,7 +239,7 @@ From the Pipeline configuration page that appears, check the **GitHub** box and 
 Scrolling down on this page to the **Advanced Project Options**, you can either past in the `Jenkinsfile`, or you can specify the filename if the file exists in the git repository.
 
 
-![alt_text](images/image15.png)
+![Specifying your Jenkinsfile](images/image15.png)
 
 
 
