--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -285,7 +285,7 @@ Click on the pipeline you created:
 
 
 
-![alt_text](images/image16.png "image_tooltip")
+![Selecting your pipeline](images/image16.png "image_tooltip")
 
 
 Click the "Build Now" icon on the left side menu.
