--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -291,7 +291,7 @@ Click on the pipeline you created:
 Click the "Build Now" icon on the left side menu.
 
 
-![alt_text](images/image17.png "image_tooltip")
+![Building your pipeline](images/image17.png "image_tooltip")
 
 Click the **Status** icon on the left side menu in order to see the results of all the output from each of the stages of your pipeline.
 
