--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -297,7 +297,7 @@ Click the **Status** icon on the left side menu in order to see the results of a
 
 
 
-![alt_text](images/status.png "image_tooltip")
+![Pipeline status](images/status.png "image_tooltip")
 
 
 Hover over the **build** stage and click the **Logs** button of the most recent build in order to see the Python script’s output.
