--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -302,7 +302,7 @@ Click the **Status** icon on the left side menu in order to see the results of a
 
 Hover over the **build** stage and click the **Logs** button of the most recent build in order to see the Python script’s output.
 
-![alt_text](images/image18.png "image_tooltip")
+![Viewing the Python logs](images/image18.png "image_tooltip")
 
 
 
