--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -310,7 +310,7 @@ Sample output: you should see a verbose response from Redis’s REST service in 
 
 There’s also a “Git” output log, in case you need to debug something at that level. Any time you update the branch in the remote git repository, you should see evidence in that log that the latest changes have successfully checked out into the local Jenkins git repository.
 
-![alt_text](images/image19.png "image_tooltip")
+![Viewing the git log](images/image19.png "image_tooltip")
 
 
 
