--- a/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
+++ b/docs/operate/continuous-integration-continuous-deployment/jenkins/index-jenkins.mdx
@@ -317,7 +317,7 @@ There’s also a “Git” output log, in case you need to debug something at th
 
 Open your Redis Enterprise Secure Management UI at `https://servername:8443` and click on the **databases** menu item to verify that your database was created with the name, port, and size specified in the `deployment-configuration-file.json` file.
 
-![alt_text](images/image20.png "image_tooltip")
+![Verifying database creation](images/image20.png "image_tooltip")
 
 
 
