--- a/docs/operate/index-operate.mdx
+++ b/docs/operate/index-operate.mdx
@@ -9,7 +9,7 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
-The following links provides you with the available options to provision Redis and acceperate app deployment using Devops.
+The following links demonstrate various ways to provision Redis and accelerate app deployment using Devops.
 
 <a href="https://redis.com/blog/why-devops-teams-love-redis-enterprise/">
 <img src="/img/logos/devopslogo.jpg" alt="devops logo" />
