--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -182,7 +182,7 @@ Click "Import".
 
 
 
-![alt_text](images/image_4.png "image_tooltip")
+![Importing the Redis data source](images/image_4.png "image_tooltip")
 
 
 
