--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -175,7 +175,7 @@ Again, click on “Data Sources” and add Redis.
 
 
 
-![alt_text](images/image_3.png "image_tooltip")
+![Adding the Redis data source](images/image_3.png "image_tooltip")
 
 
 Click "Import".
