--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -167,7 +167,7 @@ Click on “Import” for all the Prometheus dashboards.
 ![alt_text](images/image2.png "image_tooltip")
 
 
-### Step 7. Adding Redis Datasource
+### Step 7. Adding Redis Data Source
 
 Again, click on “Data Sources” and add Redis. 
 
