--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -164,7 +164,7 @@ Click on “Import” for all the Prometheus dashboards.
 
 
 
-![alt_text](images/image2.png "image_tooltip")
+![Importing the Prometheus data source](images/image2.png "image_tooltip")
 
 
 ### Step 7. Adding Redis Data Source
