--- a/docs/operate/observability/index-observability.mdx
+++ b/docs/operate/observability/index-observability.mdx
@@ -9,7 +9,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 
 
-The following links provides you with the available options to observe key indicators critical to operating Redis.
+The following links demonstrate different ways in which you can observe key indicators critical to operating Redis.
 
 <div class="row">
    <div class="col">
