--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -55,7 +55,7 @@ In the RedisTimeSeries organization you can find projects that help you integrat
 
 ## Getting Started
 
-### Prerequisite:
+### Prerequisites:
 
 
 
