--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -127,7 +127,7 @@ The `grafana` service uses an image that’s built from the `Dockerfile` in the 
 
 ### Step 3. Run the Docker Compose
 
-Change directory to compose and execute the below CLI:
+Change directory to compose and execute the following command:
 
 
 ```bash
