--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -143,7 +143,7 @@ Change directory to compose and execute the following command:
  compose-redis-1        "docker-entrypoint.s…"   redis               running             0.0.0.0:6379->6379/tcp
 ```
 
-### Step 4. Accessing the Grafana
+### Step 4. Accessing Grafana
 
 Open http://hostIP:3000 to access the Grafana dashboard. The default username and password is admin/admin.
 
