--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -135,7 +135,7 @@ Change directory to compose and execute the following command:
 ```
 
 ```bash
- ajeetraina@Ajeets-MacBook-Pro compose % docker-compose ps
+ docker-compose ps
  NAME                   COMMAND                  SERVICE             STATUS              PORTS
  compose-adapter-1      "/adapter/redis-ts-a…"   adapter             running             
  compose-grafana-1      "/run.sh"                grafana             running             0.0.0.0:3000->3000/tcp
