--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -145,7 +145,7 @@ Change directory to compose and execute the following command:
 
 ### Step 4. Accessing Grafana
 
-Open http://hostIP:3000 to access the Grafana dashboard. The default username and password is admin/admin.
+Open `http://hostIP:3000` to access the Grafana dashboard. The default username and password is admin/admin.
 
 ### Step 5. Add Prometheus Data Source
 
