--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -153,7 +153,7 @@ In the left sidebar, you will see the “Configuration” option. Select “Data
 
 
 
-![alt_text](images/image1.png "image_tooltip")
+![Adding the Prometheus data source](images/image1.png "image_tooltip")
 
 
 Click “Save and Test”.
