--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -165,7 +165,7 @@ You can also leverage Redis Enterprise Cloud as showcased in the below example.
 
 #### Using Docker Compose
 
-Assuming that Docker Compose is already installed in your system, follow the below steps:
+Assuming that Docker Compose is already installed in your system, follow these steps:
 
 
 #### Step 1.  Clone the repository
