--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -188,7 +188,7 @@ Click "Import".
 
 ### Step 8. Running the Sensor Script
 
-It’s time to test drive a few demo scripts built by the Redis team. To start with, clone the below repository
+It’s time to test drive a few demo scripts built by the Redis team. To start with, clone the following repository:
 
 
 ```
