--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -27,7 +27,7 @@ The Redis Data Source for Grafana is a plug-in that allows users to connect to t
 
    - [RedisTimeSeries](https://oss.redis.com/redistimeseries/): TS.GET, TS.INFO, TS.MRANGE, TS.QUERYINDEX, TS.RANGE
    - [RedisGears](https://oss.redis.com/redisgears/): RG.DUMPREGISTRATIONS, RG.PYEXECUTE, RG.PYSTATS
-   - [RedisSearch](https://oss.redis.com/redisearch/): FT.INFO
+   - [RedisSearch](https://oss.redis.com/redisearch/): `FT.INFO`
    - [RedisGraph](https://oss.redis.com/redisgraph/): GRAPH.QUERY, GRAPH.SLOWLOG
 
 <Tabs
