--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -221,7 +221,7 @@ Open up [https://HOSTIP:9090](https://HOSTIP:9090) to access Prometheus dashboar
 
 
 
-![alt_text](images/image_8.png "image_tooltip")
+![Accessing the Prometheus dashboard](images/image_8.png "image_tooltip")
 
 
 ### Further References:
