--- a/docs/operate/observability/prometheus/index-prometheus.mdx
+++ b/docs/operate/observability/prometheus/index-prometheus.mdx
@@ -217,7 +217,7 @@ Go to “Add Panel” on the top right corner of the Grafana dashboard and start
 
 ### Step 9. Accessing Prometheus Dashboard
 
-Open up [https://HOSTIP:9090](https://HOSTIP:9090) to access Prometheus dashboard for the sensor values without any further configuration.
+Open up `https://HOSTIP:9090` to access the Prometheus dashboard for the sensor values without any further configuration.
 
 
 
