--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -16,7 +16,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 The Redis Data Source for Grafana is a plug-in that allows users to connect to the Redis database and build dashboards in Grafana to easily monitor Redis and application data. It provides an out-of-the-box predefined dashboard, but also lets you build customized dashboards tuned to your specific needs.
 
-![my image](redis.png)
+![Redis Data Source for Grafana](redis.png)
 
 ##  Features and Capabilities
 
