--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -177,7 +177,7 @@ Assuming that Docker Compose is already installed in your system, follow these s
 
 #### Step 2. Execute the docker-compose CLI 
 
-Project provides `docker-compose.yml` to start Redis with all modules and Grafana.
+The project provides a `docker-compose.yml` file tha starts Redis with all modules and Grafana.
 
  ```bash
   docker-compose up -d
