--- a/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
+++ b/docs/operate/observability/redisexplorer/index-redisexplorer.mdx
@@ -94,7 +94,7 @@ You can even run Redis Explorer plugin using Docker
   docker run -p 3000:3000 --name=grafana -e "GF_INSTALL_PLUGINS=redis-explorer-app" grafana/grafana
  ```
 
-Open https://IP:3000 to access grafana. The default username/password is admin/admin.
+Open `https://IP:3000` to access grafana. The default username/password is admin/admin.
 
 
 ### Step 5. Log in to Grafana
