--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -57,7 +57,7 @@ The Redis Data Source for Grafana is a plug-in that allows users to connect to t
  ```
 
 
-The brew page downloads and untars the files into /usr/local/Cellar/grafana/version.
+Homebrew downloads and untars the files into /usr/local/Cellar/grafana/version.
 
 #### Step 3. Start Grafana service
 
