--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -67,7 +67,7 @@ Homebrew downloads and untars the files into /usr/local/Cellar/grafana/version.
 
 #### Step 4. Access Grafana dashboard
 
-Open https://IP:3000 to access grafana. The default username/password is admin/admin.
+Open `https://IP:3000` to access grafana. The default username/password is admin/admin.
 
 ![grafana](grafana.png)
 
