--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -111,7 +111,7 @@ You can install and run Grafana using the official Docker image.
 
 The first step is to install docker for your operating system. Run the docker version command in a terminal window to make sure that docker is installed correctly.
 
-Note - On Windows and Mac, install docker version 18.03 or higher. You can run docker version to find out your docker version.
+Note - On Windows and Mac, install Docker version 18.03 or higher. You can run `docker version` to find out your Docker version.
 
 
 
