--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -109,7 +109,7 @@ You can install and run Grafana using the official Docker image.
 
 #### Step 1. Install Docker
 
-The first step is to install docker for your operating system. Run the docker version command in a terminal window to make sure that docker is installed correctly.
+The first step is to install Docker for your operating system. Run the `docker version` command in a terminal window to make sure that Docker is installed correctly.
 
 Note - On Windows and Mac, install Docker version 18.03 or higher. You can run `docker version` to find out your Docker version.
 
