--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -147,7 +147,7 @@ Open https://IP:3000 to access grafana. The default username/password is admin/a
 #### Step 7. Add Redis Database name, Endpoint URL and password
 
 Assuming that you already have Redis server and database up and running in your infrastructure.
-You can also leverage Redis Enterprise Cloud as showcased in the below example.
+You can also leverage Redis Enterprise Cloud as demonstrated below.
 
 ![grafana](grafana_datasource4.png)
 
