--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -124,7 +124,7 @@ In our case, we will be using redis-datasource.
   docker run -d -p 3000:3000 --name=grafana -e "GF_INSTALL_PLUGINS=redis-datasource" grafana/grafana
  ```
 
-#### Step 3. Accessing the grafana dashboard
+#### Step 3. Accessing the Grafana dashboard
 
 Open https://IP:3000 to access grafana. The default username/password is admin/admin.
 
