--- a/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
+++ b/docs/operate/observability/redisdatasource/index-redisdatasource.mdx
@@ -126,7 +126,7 @@ In our case, we will be using redis-datasource.
 
 #### Step 3. Accessing the Grafana dashboard
 
-Open https://IP:3000 to access grafana. The default username/password is admin/admin.
+Open `https://IP:3000` to access Grafana. The default username/password is admin/admin.
 
 
 
